# instruction-decoder

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
examples/counter/: Cargo.toml
examples/counter/src/: lib.rs
light-instruction-decoder/: Cargo.toml
light-instruction-decoder-derive/: Cargo.toml
light-instruction-decoder-derive/src/: parsing.rs
light-instruction-decoder/src/: formatter.rs  lib.rs  litesvm.rs  registry.rs
light-instruction-decoder/src/programs/: light_system.rs  light_token.rs  light_types.rs  mod.rs
scripts/: publish.sh
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: counter_program.rs  instruction_decoder_test.rs  logging.rs  system_program.rs
tests/tests/snapshots/: counter_program__counter_configure.snap  counter_program__counter_configure_table.snap  counter_program__counter_increment.snap  counter_program__counter_increment_table.snap  counter_program__counter_initialize.snap  counter_program__counter_initialize_table.snap  counter_program__counter_set.snap  counter_program__counter_set_table.snap  logging__account_state_lamport_changes_table.snap  system_program__allocate_and_assign.snap  system_program__allocate_and_assign_table.snap  system_program__create_account.snap  system_program__create_account_table.snap  system_program__transfer.snap  system_program__transfer_table.snap
