[workspace]
resolver = "2"
members = [
    "light-instruction-decoder",
    "light-instruction-decoder-derive",
    "examples/counter",
    "tests",
]

[workspace.dependencies]
# Solana v3
solana-pubkey = { version = "3", features = ["curve25519"] }
solana-instruction = "3"
solana-signature = "3"
solana-message = "3"
solana-transaction = "3"
solana-keypair = "3"
solana-signer = "3"
solana-system-interface = "2"
solana-native-token = "3"
solana-hash = "3"
solana-program-pack = "3"
solana-program-option = "3"
# Shared
borsh = { version = "1", default-features = false, features = ["std", "derive"] }
bs58 = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.20"
zeroize = "1.8"
# Derive macro
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["visit", "visit-mut", "full"] }
darling = "0.21"
heck = "0.5"
sha2 = "0.10"
# LiteSVM local fork + pinned transitive deps to match litesvm 3.0.x
litesvm = { path = "/Users/ananas/dev/litesvm/crates/litesvm" }
# Pin litesvm transitive deps to =3.0.5 (litesvm not yet compatible with 3.1.x)
agave-feature-set = "=3.0.5"
agave-reserved-account-keys = "=3.0.5"
agave-syscalls = "=3.0.5"
solana-bpf-loader-program = "=3.0.5"
solana-builtins = "=3.0.5"
solana-builtins-default-costs = "=3.0.5"
solana-compute-budget = "=3.0.5"
solana-compute-budget-instruction = "=3.0.5"
solana-compute-budget-program = "=3.0.5"
solana-fee = "=3.0.5"
solana-loader-v4-program = "=3.0.5"
solana-program-runtime = "=3.0.5"
solana-svm-callback = "=3.0.5"
solana-svm-feature-set = "=3.0.5"
solana-svm-log-collector = "=3.0.5"
solana-svm-measure = "=3.0.5"
solana-svm-timings = "=3.0.5"
solana-svm-transaction = "=3.0.5"
solana-svm-type-overrides = "=3.0.5"
solana-system-program = "=3.0.5"
solana-transaction-context = "=3.0.5"
solana-vote-program = "=3.0.5"
# Testing
insta = { version = "1", features = ["json"] }
# Internal
light-instruction-decoder = { path = "light-instruction-decoder" }
light-instruction-decoder-derive = { path = "light-instruction-decoder-derive" }
