[package]
name = "light-instruction-decoder-derive"
version.workspace = true
description = "Derive macros for InstructionDecoder implementations"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bs58 = { workspace = true }
darling = { workspace = true }
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
sha2 = { workspace = true }
syn = { workspace = true }

[lib]
proc-macro = true
